Fix some z-indexs

--- a/src/assets/style/cmps/BackDrop.scss
+++ b/src/assets/style/cmps/BackDrop.scss
@@ -1,7 +1,7 @@
 .backdrop {
     position: fixed;
     inset: 0;
-    z-index: 9;
+    z-index: 12;
     background: $light-backdrop-clr;
     cursor: pointer;
 }
