--- a/src/assets/style/cmps/BoardDetailsHeader.scss
+++ b/src/assets/style/cmps/BoardDetailsHeader.scss
@@ -14,7 +14,7 @@
     grid-template-columns: fit-content(800px) 1fr;
     grid-template-rows: auto;
     width: 100%;
-    z-index: 10;
+    z-index: 11;
 
     .board-name {
         display: flex;
